--- a/packages/request-manager/package.json
+++ b/packages/request-manager/package.json
@@ -1,15 +1,15 @@
 {
     "name": "@trezor/request-manager",
     "version": "1.0.0",
-    "main": "src/index",
-    "license": "See LICENSE.md in repo root",
     "private": true,
+    "license": "See LICENSE.md in repo root",
     "sideEffects": false,
-    "type": "module",
+    "main": "lib/index",
     "scripts": {
-        "type-check": "tsc --build",
         "lint": "eslint '**/*.{ts,tsx,js}'",
-        "test:unit": "jest"
+        "test:unit": "jest",
+        "type-check": "tsc --build",
+        "build:lib": "rimraf ./lib && tsc --build tsconfig.json"
     },
     "dependencies": {
         "socks-proxy-agent": "6.1.1"
