--- a/packages/request-manager/tsconfig.json
+++ b/packages/request-manager/tsconfig.json
@@ -1,5 +1,6 @@
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": { "outDir": "libDev" },
+    "extends": "../../tsconfig.lib.json",
+    "compilerOptions": { "outDir": "lib" },
+    "include": ["./src"],
     "references": []
 }
