--- a/packages/suite-data/package.json
+++ b/packages/suite-data/package.json
@@ -11,7 +11,7 @@
     "description": "Trezor data",
     "scripts": {
         "build:lib": "yarn browser-detection && yarn msg-system-types && yarn guide-pull-content",
-        "browser-detection": "webpack --config ./browser-detection.webpack.js",
+        "browser-detection": "webpack --config ./browser-detection.webpack.ts",
         "copy-static-files": "ts-node ./index.ts",
         "test-same-svgs": "ts-node ./test/test-same-svgs.ts",
         "msg-system-types": "ts-node ./src/message-system/scripts/generate-types.ts",
@@ -27,6 +27,10 @@
         "@types/fs-extra": "^9.0.6",
         "@types/ua-parser-js": "^0.7.35",
         "ajv": "^8.6.2",
+        "autoprefixer": "^10.4.4",
+        "css-loader": "^6.7.1",
+        "postcss-loader": "^6.2.1",
+        "style-loader": "^3.3.1",
         "fs-extra": "^9.0.1",
         "json-schema-to-typescript": "^10.1.4",
         "jws": "^4.0.0",
