--- a/packages/suite-data/package.json
+++ b/packages/suite-data/package.json
@@ -24,10 +24,14 @@
         "ua-parser-js": "^1.0.2"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.13.15",
+        "@babel/preset-typescript": "^7.13.0",
         "@types/fs-extra": "^9.0.6",
         "@types/ua-parser-js": "^0.7.35",
         "ajv": "^8.6.2",
         "autoprefixer": "^10.4.4",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-remove-template-literals-whitespace": "^1.0.4",
         "css-loader": "^6.7.1",
         "fs-extra": "^9.0.1",
         "json-schema-to-typescript": "^10.1.4",
